--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <div id="root">Not Rendered</div>
 
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+    <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script> -->
+
     <!-- <script>
         
         // ------This is how we do using JavaScript-------
@@ -22,7 +23,7 @@
 
     </script> -->
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
