--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     </script> -->
 
-    <script type="module" src="script.js"></script>
+    <script type="module" src="App.js"></script>
 </body>
 
 </html>
